new changes for heading

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 
     <div class="heading">
-        <h1> Hello, how are you channa</h1>
+        <h1> Hello, how are you arunn</h1>
     </div>
    
 
