--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="heading">
         <h1> Hello, how are you arunn</h1>
-        <p>copyrights@channa2023</p>
+        <p>copyrights@channa2023.</p>
     </div>
    
 
