--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="heading">
         <h1> Hello, how are you arunn</h1>
         <p>copyrights@channa2023.</p>
-        <p>copyrights@rohan2023.</p>
+        <p>copyrights@baby2023.</p>
     </div>
    
 
