addition of new user

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1> Hello, how are you arunn</h1>
         <p>copyrights@channa2023.</p>
         <p>copyrights@baby2023.</p>
+        <p>copyrights@rohan2023.</p>
+
     </div>
    
 
