new img of mine

--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
-
     <div class="heading">
         <h1> Hello, how are you arunn</h1>
         <p>copyrights@channa2023.</p>
         <p>copyrights@baby2023.</p>
         <p>copyrights@rohan2023...</p>
-
     </div>
-   
+    <br><br>
 
-
+    <div class="zoom">
+        <img src="/images/rohan.JPG" alt="">
+        <div class="content">
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis debitis, corrupti dicta voluptates quam magni consequatur tempore sequi quia sunt excepturi? Repudiandae, expedita eius totam ea distinctio dolorem eligendi veritatis.</p>
+        </div>
+    </div>
+    <br><br>
+    <br><br>
+    <hr><br>
 </body>
 </html>
