--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
     <br><br>
     <br><br>
     <hr><br>
+    <div class="flex-box">
+    <button class="flex-item">item1</button>
+    <button class="flex-item">item2</button>
+    <button class="flex-item">item3</button>
+    </div>
+    <br><hr><br>
 </body>
 </html>
